# station-scout

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
.omx/ultragoal/: brief.md  goals.json  ledger.jsonl
docs/: accessibility-audit.md
installer/: __init__.py  build.py  build_nuitka.py  nuitka_entry.py  station-scout.iss
scripts/: changelog_tools.py
src/station_scout/: __init__.py  app.py  cast.py  direct_streams.py  integrations_config.py  lastfm.py  models.py  notifications.py  player.py  radio_browser.py  schedule.py  spotify.py  storage.py  tracklog.py
tests/: test_app.py  test_app_helpers.py  test_cast.py  test_direct_streams.py  test_integrations_config.py  test_lastfm.py  test_models.py  test_notifications.py  test_player.py  test_radio_browser.py  test_schedule.py  test_spotify.py  test_storage.py  test_tracklog.py
