[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "station-scout"
version = "0.1.0"
description = "Accessible desktop internet radio explorer using Radio Browser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wxPython>=4.2",
    "requests>=2.32",
    "toasted>=0.2; sys_platform == 'win32'",
    "desktop-notifier>=6.2; sys_platform == 'darwin'",
    "sound-lib>=0.83",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
station-scout = "station_scout.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
